Fix overflow of dialogs

--- a/level-editor/style.css
+++ b/level-editor/style.css
@@ -200,10 +200,7 @@ html
 
 #dialog textarea
 {
-    width: 96%;
-    height: 96%;
     margin: 0em;
-    resize: none;
     background-color: white;
 }
 
@@ -217,6 +214,7 @@ html
 #dialog input
 {
     padding-left: 0.3em;
+    min-width: 1em;
 }
 
 #dialog label
@@ -226,6 +224,7 @@ html
     color: black;
     padding-top: 0.4em;
     padding-right: 0.3em;
+    min-width: 1em;
 }
 
 #dialog label.error
